# -*- tab-width: 2; indent-tabs-mode: nil; coding: utf-8 -*-

======================
  MAICoS CHANGELOG
======================

The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - don't reproduce every git log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, Y/M/D date format) and do not
    use tabs but use spaces for formatting


XXXX/XX/XX Philip Loche

  * 0.2
  
  * Added custom module
  * Less noisy DeprecationWarning
  * Fixed wrong center of mass velocity in velocity module
  * Fixed documentation in diporder for P0
  * Fixed debug if error in parsing
  * Added test files for an air-water trajectory and the diporder module


2019/10/30 Philip Loche

  * 0.1

  * first release out of the lab