@@ -1,7 +1,7 @@
 #!/usr/bin/env python3
 # -*- Mode: python; tab-width: 4; indent-tabs-mode:nil; coding:utf-8 -*-
 #
-# Copyright (c) 2019 Authors and contributors
+# Copyright (c) 2020 Authors and contributors
 # (see the file AUTHORS for the full list of names)
 #
 # Released under the GNU Public Licence, v2 or any higher version
@@ -175,9 +175,6 @@ class saxs(SingleGroupAnalysisBase):
                 np.double(positions / 10), np.double(box / 10), self.startq,
                 self.endq, self.mintheta, self.maxtheta)
 
-            q_ts = np.asarray(q_ts)
-            S_ts = np.asarray(S_ts)
-
             S_ts *= compute_form_factor(q_ts, self.atom_types[i])**2
 
             if self.nobindata:
@@ -244,7 +241,7 @@ class saxs(SingleGroupAnalysisBase):
                     "q (1/nm)\tq_i\t q_j \t q_k \tS(q) (arb. units)",
                     fmt='%.4e')
         else:
-            savetxt(self.output + '.dat',
+            savetxt(self.output,
                     np.vstack([self.results["q"],
                                self.results["scat_factor"]]).T,
                     header="q (1/nm)\tS(q) (arb. units)",
